--- a/src/index.css
+++ b/src/index.css
@@ -456,3 +456,14 @@ td {
   width: 20px;
   height: 20px;
 }
+
+.currency_card {
+  background: rgba(0, 0, 0, 0.41);
+  border: 2.725px solid #ffffff;
+  box-shadow: 0px 3px 12px rgba(0, 0, 0, 0.25);
+  border-radius: 16.35px;
+}
+
+.currency_card img {
+  filter: brightness(60%);
+}
