--- a/src/index.css
+++ b/src/index.css
@@ -137,6 +137,18 @@
   border-left: none;
 }
 
+.border_left_country {
+  border-top-left-radius: 27px;
+  border-bottom-left-radius: 27px;
+  border-right: none;
+}
+
+.border_right_country {
+  border-top-right-radius: 27px;
+  border-bottom-right-radius: 27px;
+  border-left: none;
+}
+
 /* providers */
 .grid-4 {
   display: grid;
@@ -353,6 +365,7 @@ td {
 .rate_card {
   box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
   border-radius: 14px;
+  height: 56px !important;
 }
 
 .h-0 {
@@ -470,4 +483,33 @@ td {
 
 .border-radius-0 {
   border-radius: 0px !important;
+}
+
+.weird-nav {
+  border-bottom: 1px solid rgba(104, 113, 130, 0.58);
+  margin-bottom: 3rem;
+  padding-bottom: 1px;
+  height: 35px;
+}
+
+.weird-nav-item {
+  font-size: 20px;
+  line-height: 24px;
+  color: #263238;
+  opacity: 0.6;
+  margin-right: 1.5rem;
+  padding-bottom: 8px;
+}
+
+.selected_nav {
+  opacity: 1;
+  border-bottom: 3px solid #6246ea;
+}
+
+.special-height {
+  height: calc(90vh - 6rem);
+}
+
+.special-height2 {
+  height: calc(90vh - 9rem - 35px);
 }
